Test1 https://app.asana.com/0/1202776406454487/1205767864359338/f

--- a/.github/workflows/create-asana-attachment.yaml
+++ b/.github/workflows/create-asana-attachment.yaml
@@ -3,6 +3,7 @@ on:
 
 jobs:
   create-asana-attachment-job:
+    if: "!contains(github.event.head_commit.message, 'https://app.asana.com/')"
     runs-on: ubuntu-latest
     name: Create pull request attachments on Asana tasks
     steps:
